--- a/package.json
+++ b/package.json
@@ -26,6 +26,8 @@
   },
   "homepage": "https://github.com/Gitit-TGA/Gitit#readme",
   "dependencies": {
-    "jsdom": "^3.1.2"
+    "jsdom": "^3.1.2",
+    "mongoose": "^4.1.4",
+    "request": "^2.61.0"
   }
 }
