--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
   },
   "homepage": "https://github.com/Gitit-TGA/Gitit#readme",
   "dependencies": {
+    "htmlparser2": "^3.8.3",
     "jsdom": "^3.1.2"
   }
 }
