--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
   },
   "homepage": "https://github.com/Gitit-TGA/Gitit#readme",
   "dependencies": {
+    "bigquery-model": "^0.2.3",
     "htmlparser2": "^3.8.3",
     "jsdom": "^3.1.2",
     "mongoose": "^4.1.4",
