--- a/package.json
+++ b/package.json
@@ -27,6 +27,10 @@
   "homepage": "https://github.com/Gitit-TGA/Gitit#readme",
   "dependencies": {
     "bigquery-model": "^0.2.3",
+    "chai": "^3.2.0",
+    "gulp": "^3.9.0",
+    "gulp-jshint": "^1.11.2",
+    "gulp-mocha": "^2.1.3",
     "htmlparser2": "^3.8.3",
     "jsdom": "^3.1.2",
     "mongoose": "^4.1.4",
