--- a/package.json
+++ b/package.json
@@ -30,7 +30,9 @@
     "chai": "^3.2.0",
     "express": "^4.13.3",
     "gulp": "^3.9.0",
+    "gulp-connect": "^2.2.0",
     "gulp-jshint": "^1.11.2",
+    "gulp-livereload": "^3.8.0",
     "gulp-mocha": "^2.1.3",
     "htmlparser2": "^3.8.3",
     "jsdom": "^3.1.2",
