--- a/package.json
+++ b/package.json
@@ -40,5 +40,8 @@
     "path": "^0.11.14",
     "pubnub": "^3.7.14",
     "request": "^2.61.0"
+  },
+  "devDependencies": {
+    "jshint-stylish": "^2.0.1"
   }
 }
